fix: word wrap and word break settings

--- a/packages/global/styles/04-elements/_elements-code.scss
+++ b/packages/global/styles/04-elements/_elements-code.scss
@@ -9,6 +9,12 @@ $bolt-code-background-color: rgba(bolt-color(indigo, light), 0.08);
 
 pre,
 code {
+  white-space: -moz-pre-wrap;
+  white-space: -o-pre-wrap;
+  white-space: pre-wrap;
+  word-spacing: normal;
+  word-break: normal;
+  word-wrap: break-word;
   color: inherit;
   color: $bolt-code-text-color;
   text-align: left;
